// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Structured Data Snapshot Tests > Breadcrumb Schema > generates breadcrumb for homepage 1`] = `
{
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "item": "https://talesofaneria.com",
      "name": "Home",
      "position": 1,
    },
  ],
}
`;

exports[`Structured Data Snapshot Tests > Breadcrumb Schema > generates breadcrumb for nested pages 1`] = `
{
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "item": "https://talesofaneria.com",
      "name": "Home",
      "position": 1,
    },
    {
      "@type": "ListItem",
      "item": "https://talesofaneria.com/characters",
      "name": "Characters",
      "position": 2,
    },
    {
      "@type": "ListItem",
      "item": "https://talesofaneria.com/characters/taebrin",
      "name": "Taebrin",
      "position": 3,
    },
  ],
}
`;

exports[`Structured Data Snapshot Tests > Breadcrumb Schema > handles empty breadcrumb 1`] = `
{
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [],
}
`;

exports[`Structured Data Snapshot Tests > CreativeWork Schema > generates character creative work schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "CreativeWork",
  "creator": {
    "@type": "Person",
    "name": "Preston",
  },
  "description": "A wise and powerful Wood Elf Druid",
  "genre": [
    "Fantasy",
    "Tabletop RPG",
    "Dungeons & Dragons",
  ],
  "image": "https://example.com/taebrin.jpg",
  "isPartOf": {
    "@type": "CreativeWorkSeries",
    "name": "Tales of Aneria",
  },
  "name": "Taebrin Oakwind",
}
`;

exports[`Structured Data Snapshot Tests > CreativeWork Schema > handles missing image 1`] = `
{
  "@context": "https://schema.org",
  "@type": "CreativeWork",
  "creator": {
    "@type": "Person",
    "name": "Creator",
  },
  "description": "Character without image",
  "genre": [
    "Fantasy",
    "Tabletop RPG",
    "Dungeons & Dragons",
  ],
  "image": undefined,
  "isPartOf": {
    "@type": "CreativeWorkSeries",
    "name": "Tales of Aneria",
  },
  "name": "No Image Character",
}
`;

exports[`Structured Data Snapshot Tests > CreativeWork Schema > includes genre information 1`] = `
{
  "@context": "https://schema.org",
  "@type": "CreativeWork",
  "creator": {
    "@type": "Person",
    "name": "Test Creator",
  },
  "description": "Test description",
  "genre": [
    "Fantasy",
    "Tabletop RPG",
    "Dungeons & Dragons",
  ],
  "image": undefined,
  "isPartOf": {
    "@type": "CreativeWorkSeries",
    "name": "Tales of Aneria",
  },
  "name": "Test Character",
}
`;

exports[`Structured Data Snapshot Tests > CreativeWork Schema > links to creative work series 1`] = `
{
  "@context": "https://schema.org",
  "@type": "CreativeWork",
  "creator": {
    "@type": "Person",
    "name": "Test",
  },
  "description": "Test",
  "genre": [
    "Fantasy",
    "Tabletop RPG",
    "Dungeons & Dragons",
  ],
  "image": undefined,
  "isPartOf": {
    "@type": "CreativeWorkSeries",
    "name": "Tales of Aneria",
  },
  "name": "Test",
}
`;

exports[`Structured Data Snapshot Tests > Organization Schema > generates valid organization schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Organization",
  "contactPoint": {
    "@type": "ContactPoint",
    "contactType": "Customer Service",
    "email": "legal@talesofaneria.com",
  },
  "description": "Epic TTRPG live play series exploring the mystical world of Aneria through Dungeons & Dragons gameplay",
  "logo": "https://talesofaneria.com/favicon.png",
  "name": "Tales of Aneria",
  "sameAs": [
    "https://www.youtube.com/@TalesofAneria",
    "https://twitter.com/talesofaneria",
    "https://www.patreon.com/talesofaneria",
  ],
  "url": "https://talesofaneria.com",
}
`;

exports[`Structured Data Snapshot Tests > Organization Schema > includes all social media links 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Organization",
  "contactPoint": {
    "@type": "ContactPoint",
    "contactType": "Customer Service",
    "email": "legal@talesofaneria.com",
  },
  "description": "Epic TTRPG live play series exploring the mystical world of Aneria through Dungeons & Dragons gameplay",
  "logo": "https://talesofaneria.com/favicon.png",
  "name": "Tales of Aneria",
  "sameAs": [
    "https://www.youtube.com/@TalesofAneria",
    "https://twitter.com/talesofaneria",
    "https://www.patreon.com/talesofaneria",
  ],
  "url": "https://talesofaneria.com",
}
`;

exports[`Structured Data Snapshot Tests > Organization Schema > includes contact information 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Organization",
  "contactPoint": {
    "@type": "ContactPoint",
    "contactType": "Customer Service",
    "email": "legal@talesofaneria.com",
  },
  "description": "Epic TTRPG live play series exploring the mystical world of Aneria through Dungeons & Dragons gameplay",
  "logo": "https://talesofaneria.com/favicon.png",
  "name": "Tales of Aneria",
  "sameAs": [
    "https://www.youtube.com/@TalesofAneria",
    "https://twitter.com/talesofaneria",
    "https://www.patreon.com/talesofaneria",
  ],
  "url": "https://talesofaneria.com",
}
`;

exports[`Structured Data Snapshot Tests > Person Schema (character page integration) > description template includes player + character context 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Person",
  "description": "Preston Farr plays Wayne "Archivist of Lies", a Changeling Wizard, in Tales of Aneria.",
  "image": undefined,
  "memberOf": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "name": "Preston Farr",
  "sameAs": [
    "https://www.youtube.com/@fuzzysquirrel",
    "https://x.com/prestonbfarr",
    "https://www.instagram.com/fuzzysquirreltv",
    "https://www.twitch.tv/fuzzysquirrel",
    "https://prestonfarr.com",
  ],
}
`;

exports[`Structured Data Snapshot Tests > Person Schema > generates complete person schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Person",
  "description": "Game Master and storyteller",
  "image": "https://example.com/john.jpg",
  "memberOf": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "name": "John Smith",
  "sameAs": [
    "https://twitter.com/johnsmith",
    "https://www.instagram.com/johnsmith",
  ],
}
`;

exports[`Structured Data Snapshot Tests > Person Schema > generates person schema with minimal data 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Person",
  "description": undefined,
  "image": undefined,
  "memberOf": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "name": "Jane Doe",
  "sameAs": undefined,
}
`;

exports[`Structured Data Snapshot Tests > Person Schema > includes organization membership 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Person",
  "description": undefined,
  "image": undefined,
  "memberOf": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "name": "Test Person",
  "sameAs": undefined,
}
`;

exports[`Structured Data Snapshot Tests > PodcastEpisode Schema > generates valid PodcastEpisode schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "PodcastEpisode",
  "associatedMedia": {
    "@type": "MediaObject",
    "contentUrl": "https://anchor.fm/talesofaneria/episodes/ep-1",
  },
  "datePublished": "2024-03-15",
  "description": "The party descends into the Mire.",
  "name": "Ep 1: Into the Mire",
  "partOfSeries": {
    "@type": "PodcastSeries",
    "name": "The Forgotten Gods Saga",
  },
}
`;

exports[`Structured Data Snapshot Tests > TVEpisode Schema > generates complete TVEpisode schema with embedded VideoObject 1`] = `
{
  "@context": "https://schema.org",
  "@type": "TVEpisode",
  "datePublished": "2024-03-15",
  "description": "Our heroes descend into the Mire of Forgotten Names.",
  "episodeNumber": 1,
  "image": "https://i.ytimg.com/vi/PLACEHOLDER1/hqdefault.jpg",
  "name": "Into the Mire",
  "partOfSeries": {
    "@type": "TVSeries",
    "name": "The Forgotten Gods Saga",
    "url": "https://talesofaneria.com/campaigns/forgotten-gods-saga",
  },
  "url": "https://talesofaneria.com/campaigns/forgotten-gods-saga/episodes/1",
  "video": {
    "@type": "VideoObject",
    "contentUrl": "https://www.youtube.com/watch?v=PLACEHOLDER1",
    "description": "Our heroes descend into the Mire of Forgotten Names.",
    "duration": "PT2H15M",
    "embedUrl": "https://www.youtube.com/watch?v=PLACEHOLDER1",
    "name": "Into the Mire",
    "thumbnailUrl": "https://i.ytimg.com/vi/PLACEHOLDER1/hqdefault.jpg",
    "uploadDate": "2024-03-15",
  },
}
`;

exports[`Structured Data Snapshot Tests > TVSeries Schema > generates complete TVSeries schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "TVSeries",
  "actor": [
    {
      "@type": "Person",
      "name": "Cory Avis",
    },
    {
      "@type": "Person",
      "name": "Preston Farr",
    },
  ],
  "description": "An epic saga of forgotten deities returning to Aneria",
  "genre": [
    "Fantasy",
    "Tabletop RPG",
    "Dungeons & Dragons",
    "Live Play",
  ],
  "name": "The Forgotten Gods Saga",
  "numberOfEpisodes": 12,
  "productionCompany": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "startDate": "2024-03-15",
  "url": "https://talesofaneria.com/campaigns/forgotten-gods-saga",
}
`;

exports[`Structured Data Snapshot Tests > TVSeries Schema > includes endDate and image when provided 1`] = `
{
  "@context": "https://schema.org",
  "@type": "TVSeries",
  "actor": [
    {
      "@type": "Person",
      "name": "Cast Member",
    },
  ],
  "description": "Test",
  "endDate": "2024-12-31",
  "genre": [
    "Fantasy",
    "Tabletop RPG",
    "Dungeons & Dragons",
    "Live Play",
  ],
  "image": "https://example.com/thumb.jpg",
  "name": "Test",
  "numberOfEpisodes": 5,
  "productionCompany": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "startDate": "2024-01-01",
  "url": "https://talesofaneria.com/campaigns/test",
}
`;

exports[`Structured Data Snapshot Tests > Video Schema > generates complete video schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "VideoObject",
  "contentUrl": "https://www.youtube.com/watch?v=abc123",
  "description": "The adventure begins in the mystical city of Eldoria",
  "duration": "PT1H30M",
  "embedUrl": "https://www.youtube.com/watch?v=abc123",
  "name": "Tales of Aneria - Episode 1",
  "publisher": {
    "@type": "Organization",
    "logo": {
      "@type": "ImageObject",
      "url": "https://talesofaneria.com/favicon.png",
    },
    "name": "Tales of Aneria",
  },
  "thumbnailUrl": "https://i.ytimg.com/vi/abc123/hqdefault.jpg",
  "uploadDate": "2024-01-15T10:00:00Z",
}
`;

exports[`Structured Data Snapshot Tests > Video Schema > generates video schema with minimal data 1`] = `
{
  "@context": "https://schema.org",
  "@type": "VideoObject",
  "contentUrl": undefined,
  "description": "Test description",
  "duration": undefined,
  "embedUrl": undefined,
  "name": "Test Video",
  "publisher": {
    "@type": "Organization",
    "logo": {
      "@type": "ImageObject",
      "url": "https://talesofaneria.com/favicon.png",
    },
    "name": "Tales of Aneria",
  },
  "thumbnailUrl": "https://example.com/thumb.jpg",
  "uploadDate": "2024-01-01T00:00:00Z",
}
`;

exports[`Structured Data Snapshot Tests > Video Schema > includes publisher information 1`] = `
{
  "@context": "https://schema.org",
  "@type": "VideoObject",
  "contentUrl": undefined,
  "description": "Test",
  "duration": undefined,
  "embedUrl": undefined,
  "name": "Test",
  "publisher": {
    "@type": "Organization",
    "logo": {
      "@type": "ImageObject",
      "url": "https://talesofaneria.com/favicon.png",
    },
    "name": "Tales of Aneria",
  },
  "thumbnailUrl": "https://example.com/thumb.jpg",
  "uploadDate": "2024-01-01T00:00:00Z",
}
`;

exports[`Structured Data Snapshot Tests > WebSite Schema > generates valid website schema 1`] = `
{
  "@context": "https://schema.org",
  "@type": "WebSite",
  "description": "Join us on an epic journey through the mystical world of Aneria. Watch our TTRPG live play series, explore rich lore, and discover exclusive merchandise from our adventures.",
  "name": "Tales of Aneria",
  "potentialAction": {
    "@type": "SearchAction",
    "query-input": "required name=search_term_string",
    "target": "https://talesofaneria.com/characters?search={search_term_string}",
  },
  "publisher": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "url": "https://talesofaneria.com",
}
`;

exports[`Structured Data Snapshot Tests > WebSite Schema > includes publisher information 1`] = `
{
  "@context": "https://schema.org",
  "@type": "WebSite",
  "description": "Join us on an epic journey through the mystical world of Aneria. Watch our TTRPG live play series, explore rich lore, and discover exclusive merchandise from our adventures.",
  "name": "Tales of Aneria",
  "potentialAction": {
    "@type": "SearchAction",
    "query-input": "required name=search_term_string",
    "target": "https://talesofaneria.com/characters?search={search_term_string}",
  },
  "publisher": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "url": "https://talesofaneria.com",
}
`;

exports[`Structured Data Snapshot Tests > WebSite Schema > includes search action 1`] = `
{
  "@context": "https://schema.org",
  "@type": "WebSite",
  "description": "Join us on an epic journey through the mystical world of Aneria. Watch our TTRPG live play series, explore rich lore, and discover exclusive merchandise from our adventures.",
  "name": "Tales of Aneria",
  "potentialAction": {
    "@type": "SearchAction",
    "query-input": "required name=search_term_string",
    "target": "https://talesofaneria.com/characters?search={search_term_string}",
  },
  "publisher": {
    "@type": "Organization",
    "name": "Tales of Aneria",
  },
  "url": "https://talesofaneria.com",
}
`;
